<resources>
    <string name="app_name">Tasks planning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_task">Name Task</string>
    <string name="name_point">Name point</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="edit_task">Edit task</string>
    <string name="view_task">View task</string>
    <string name="list_tasks">List tasks</string>
    <string name="add_point">add point</string>
    <string name="number_point">Number point</string>
    <string name="type_trigger">Type trigger</string>
    <string name="edit_click_point">Edit click point</string>
    <string name="empty_name_point">Name point empty</string>
    <string name="delete">Delete</string>
    <string name="empty_name_task">Empty name task</string>
    <string name="start">Start</string>
    <string name="statistic">Statistic</string>
    <string name="date_create">Date create</string>
    <string name="active">Active</string>
    <string name="next">Next</string>
    <string name="duration">Duration</string>
    <string name="content_title_run_task">Running task</string>
    <string name="run">Run</string>
    <string name="view">View</string>
    <string name="back">Back</string>
    <string name="minimum">Minimum</string>
    <string name="average">Average</string>
    <string name="maximum">Maximum</string>
    <string name="trigger_type">Trigger type</string>
    <string name="coordinates">coordinates:</string>
    <string name="need_change_permission">Need change permissions</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <string name="geofence_radius">Geofence radius</string>
    <string name="geofence_radius_in_meters">Geofence radius in meters(example 10.5)</string>
</resources>