<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_point"/>
        <EditText
            android:id="@+id/edt_name"
            app:layout_constraintStart_toEndOf="@+id/txt_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_point"/>
        <TextView
            android:id="@+id/txt_trigger_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_trigger"/>
        <Spinner
            android:id="@+id/spn_trigger_type"
            app:layout_constraintTop_toBottomOf="@+id/edt_name"
            app:layout_constraintStart_toEndOf="@+id/txt_trigger_type"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt_num"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_trigger_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_point"/>
        <EditText
            android:id="@+id/edt_number"
            app:layout_constraintStart_toEndOf="@+id/txt_num"
            app:layout_constraintTop_toBottomOf="@id/spn_trigger_type"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_point"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>