<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="runTaskWithPoints"
            type="com.smogunovandrey.tasksplanning.taskstemplate.RunTaskWithPoints" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_task"/>
        <TextView
            android:id="@+id/txt_name"
            app:layout_constraintStart_toEndOf="@+id/txt_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@{runTaskWithPoints.runTask.name}"
            android:layout_marginStart="10dp"
            android:background="@drawable/border_blue"/>
        <TextView
            android:id="@+id/txt_date_create_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_date_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_create"/>
        <TextView
            android:id="@+id/txt_date_create"
            app:layout_constraintStart_toEndOf="@+id/txt_date_create_label"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:date="@{runTaskWithPoints.runTask.dateCreate}"
            android:layout_marginStart="10dp"
            android:background="@drawable/border_blue"/>
        <TextView
            android:id="@+id/txt_active_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"/>
        <TextView
            android:id="@+id/txt_active"
            app:layout_constraintStart_toEndOf="@+id/txt_active_label"
            app:layout_constraintTop_toBottomOf="@+id/txt_date_create"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Boolean.toString(runTaskWithPoints.runTask.active)}"
            android:padding="5dp"
            android:background="@drawable/border_green"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_run_points"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/txt_active"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_run_point"
            android:background="@drawable/border_blue"/>
        <Button
            android:id="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:status_button_next="@{runTaskWithPoints}"
            android:text="@string/next"/>
        <Button
            android:id="@+id/btn_cancel"
            app:layout_constraintStart_toEndOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>